Created ImageUtils for future testing. Created Dialect and LanguageUtils in utils.language, will likely expand on these utils in future -> all tests pass.